Add core tower processors